0.1.75
- add section.smooth()

0.1.74
- add argument "src" to as.ctd()
    http://code.google.com/p/r-oce/issues/detail?id=22
- plot.section() RHS axis needs tics
    http://code.google.com/p/r-oce/issues/detail?id=32
- trim axis whitespace in plot.profile() and plot.TS()
    http://code.google.com/p/r-oce/issues/detail?id=31
- make read.oce() understand WOCE section type
    http://code.google.com/p/r-oce/issues/detail?id=30
- speed up sw.spice()
    http://code.google.com/p/r-oce/issues/detail?id=29
- add read.rbrtdr(), summary.rbrtdr(), plot.rbrtdr(), and rbrtdr.trim()
- make plot.TS() isopycnal label size be same on top and right sides
    http://code.google.com/p/r-oce/issues/detail?id=26
- add lwd argument to plot.profile() 
- give plot.section() ability to control contour levels and labels
- give plot.section() tics for station-location

0.1.73
- plot.topo() narrows autoscale to xlim-ylim region, if provided
- add plot.ctd() 'textpanel' option, and put the profiles in the same row
- fix bug in plot.profile() to let it take Slim,..., as args
    http://code.google.com/p/r-oce/issues/detail?id=25
- fix bug in plot.profile() font size
    http://code.google.com/p/r-oce/issues/detail?id=24
- fix bug in plot.profile(type="S_T") positioning
    http://code.google.com/p/r-oce/issues/detail?id=23
- fix bug in section plot (bottom was missing)
    http://code.google.com/p/r-oce/issues/detail?id=21
- fix bug in size of salinity axis label for plot.ctd()
- use pch=21 for TS plots (so data density is more visible)

0.1.72
- add interp.barnes()

0.1.71
- fix bug in make.section (ignored the list, if a list provided)
   http://code.google.com/p/r-oce/issues/detail?id=18&q=label:Type-Defect
- add oce.edit()
- add topo.maritimes dataset
- add read.topo(), plot.topo(), and summary.topo()
- add gebco.colors()
- make plot.section() check that pressures coincide

0.1.70
- plot.TS(): make isopycnal list work better for nearly-fresh water