@@ -1,5 +1,12 @@
 0.1.75
+- add argument 'xtype' to plot.section()
 - add section.smooth()
+- fix bug making summary.ctd() fail for stations within sections made by section.smooth()
+    http://code.google.com/p/r-oce/issues/detail?id=34
+- fix bug making sw.dynamic.height() choke on empty stations
+    http://code.google.com/p/r-oce/issues/detail?id=33
+- fix bug making plot.section() die if x is unordered
+    http://code.google.com/p/r-oce/issues/detail?id=36
 
 0.1.74
 - add argument "src" to as.ctd()
